docs: clarify MVP scope - no admin UI, manual upload only
Updated .agents.md, implementation-plan.md, and README.md to reflect:
- Admin uploads weekly lines via script (no web UI for MVP)
- User interface is the only web UI component
- API has only user endpoints (no admin endpoints)
- Excel output must match exact format of Weekly Picks Example
- Simplified workflow focuses on solving mobile picking problem
- Reduced estimated time from 40-50 to 25-35 hours

--- a/.agents.md
+++ b/.agents.md
@@ -2,7 +2,12 @@
 
 ## Project Overview
 
-This is a Progressive Web Application (PWA) for managing a weekly college football pick'em game. The application allows an admin to upload weekly betting lines and users to select 6 games against the spread, generating an Excel output for submission.
+This is a Progressive Web Application (PWA) for managing a weekly college football pick'em game. 
+
+**MVP Scope:**
+- **Admin**: Manually upload weekly lines Excel file to Azure Blob Storage (no web UI needed for MVP)
+- **User**: Web interface to view available games, select 6 games, and download formatted Excel picks file
+- **Focus**: Solve the mobile problem - make picks on the go instead of requiring a computer
 
 ## Technology Stack
 
@@ -23,8 +28,8 @@ against-the-spread/
 │       ├── build-test.yml          # Build and test on PR
 │       └── deploy.yml               # Deploy to Azure on merge to main
 ├── src/
-│   ├── AgainstTheSpread.Functions/  # Azure Functions API
-│   ├── AgainstTheSpread.Web/        # Blazor WASM PWA
+│   ├── AgainstTheSpread.Functions/  # Azure Functions API (user endpoints only)
+│   ├── AgainstTheSpread.Web/        # Blazor WASM PWA (user interface only)
 │   ├── AgainstTheSpread.Core/       # Shared models and utilities
 │   └── AgainstTheSpread.Tests/      # Unit and integration tests
 ├── infrastructure/
@@ -37,7 +42,8 @@ against-the-spread/
 │   │       └── prod.tfvars
 │   └── scripts/
 │       ├── deploy-dev.sh
-│       └── deploy-prod.sh
+│       ├── deploy-prod.sh
+│       └── upload-lines.sh         # Helper script for admin to upload lines
 ├── reference-docs/                  # Excel examples and rules
 ├── .agents.md                       # This file
 ├── implementation-plan.md           # Detailed step-by-step plan
@@ -48,38 +54,41 @@ against-the-spread/
 ## Development Workflow
 
 ### Phase 1: Infrastructure Setup
-1. Configure Terraform for Azure resources
+1. Configure Terraform for Azure resources (Storage Account, Static Web App, Functions)
 2. Create dev and prod environments
-3. Document local deployment process
+3. Create helper script for admin to upload lines to blob storage
 4. Validate resources are created correctly
 
 ### Phase 2: Core Library Development
 1. Define data models (Game, WeeklyLines, UserPicks)
-2. Create Excel parsing utilities (EPPlus)
-3. Create Excel generation utilities
+2. Create Excel parsing utilities (read uploaded lines)
+3. Create Excel generation utilities (generate picks in exact format)
 4. Write comprehensive unit tests for all core logic
-5. Validate models work with sample data
+5. Validate with real sample Excel files
 
-### Phase 3: Backend API Development
+### Phase 3: Backend API Development (Minimal)
 1. Create Azure Functions project structure
-2. Implement admin endpoints (upload lines)
-3. Implement user endpoints (get lines, submit picks)
-4. Write unit tests for each endpoint
-5. Write integration tests with mock storage
-6. Test locally with Azurite (Azure Storage Emulator)
+2. Implement user endpoints:
+   - GET /api/lines/{week} - Read Excel from blob, parse, return games
+   - POST /api/picks - Receive picks, generate Excel, return file
+3. Write unit tests for endpoints
+4. Test locally with Azurite
 
 ### Phase 4: Frontend PWA Development
 1. Create Blazor WASM project with PWA template
-2. Implement admin interface (upload UI)
-3. Implement user interface (game selection)
-4. Implement Excel download functionality
-5. Add PWA manifest and service worker
-6. Write component tests with bUnit
-7. Test on mobile devices
+2. Implement single user interface:
+   - List available weeks (read from blob storage)
+   - Display games for selected week
+   - Allow selection of exactly 6 games
+   - Input name
+   - Download formatted Excel picks
+3. Add PWA manifest and service worker
+4. Write component tests with bUnit
+5. Test on mobile devices
 
 ### Phase 5: Integration Testing
 1. End-to-end testing with real Azure resources (dev)
-2. Test admin upload → user download flow
+2. Test: Admin uploads via script → User picks games → Downloads Excel
 3. Test PWA installation on mobile
 4. Performance testing
 
@@ -200,40 +209,36 @@ terraform destroy -var-file="environments/dev.tfvars"
 - Ensures type safety across the stack
 
 ### 3. Excel Processing Strategy
-- Admin uploads Excel → Parse to JSON → Store in Blob
-- User selects games → Generate Excel from template → Download
-- Keep original Excel as backup in Blob Storage
+- Admin manually uploads Excel to Blob Storage using Azure CLI or helper script
+- User API reads Excel directly from blob when requested
+- Parse Excel to JSON in-memory for API response
+- User selects games → Generate Excel in exact "Weekly Picks Example" format → Download
+- No intermediate storage needed - all done in-memory
 
 ### 4. Authentication Strategy
-- MVP: No authentication (trust-based)
-- Future: Azure AD B2C for user management
-- Admin endpoints can be protected with function keys initially
+- MVP: No authentication (trust-based, same as current email system)
+- Future: Azure AD B2C for user management if needed
 
 ### 5. Storage Strategy
 ```
 Blob Container: gamefiles
-├── lines/
-│   ├── week-1.xlsx          # Original uploaded file
-│   ├── week-1.json          # Parsed game data
-│   ├── week-2.xlsx
-│   └── week-2.json
-└── picks/                    # Optional: store submitted picks
-    ├── week-1/
-    │   ├── user1.xlsx
-    │   └── user2.xlsx
-    └── week-2/
+└── lines/
+    ├── week-1.xlsx          # Manually uploaded by admin
+    ├── week-2.xlsx
+    └── week-N.xlsx
 ```
+
+No picks storage needed for MVP - users download and email themselves.
 
 ### 6. API Endpoints
 
-**Admin:**
-- `POST /api/admin/lines/{week}` - Upload weekly lines Excel
-- `GET /api/admin/lines` - List all available weeks
+**User Endpoints (Only):**
+- `GET /api/weeks` - List available weeks (list blobs in storage)
+- `GET /api/lines/{week}` - Get games for specific week (read & parse Excel)
+- `POST /api/picks` - Submit picks and generate Excel download (in-memory, returns file)
 
-**User:**
-- `GET /api/lines/{week}` - Get games for specific week
-- `GET /api/lines/current` - Get games for current week
-- `POST /api/picks` - Submit picks and generate Excel download
+**Admin:**
+- No API needed - uses Azure CLI or helper script to upload files directly to blob storage
 
 ## Error Handling Strategy
 
